fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ nav {
 .welcome-blurb {
   min-height: 15rem;
   max-height: 16rem;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .card {
